# AI3DEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
3DEngine/: Camera.cpp  Camera.h  MaterialGroups.cpp  MaterialGroups.h  Window.cpp  Window.h
3DEngine/GUI/: GUI.cpp  GUI.h  GUIElement.h
3DEngine/GUI/Button/: Button.cpp  Button.h
3DEngine/GUI/Layout/: Pane.cpp  Pane.h
3DEngine/GUI/Text/: Text.cpp  Text.h
3DEngine/Helper/: Intersection.cpp  Intersection.h
3DEngine/Loader/: ObjLoader.cpp  ObjLoader.h  ShaderLoader.cpp  ShaderLoader.h  TextureLoader.cpp  TextureLoader.h
3DEngine/Models/: Model.h
3DEngine/Models/Cube/: Cube.cpp  Cube.h
3DEngine/Models/ObjModel/: ObjModel.cpp  ObjModel.h
3DEngine/Models/Track/: BallPoint.cpp  BallPoint.h  Spline.cpp  Spline.h  Track.cpp  Track.h  TrackGeneration.cpp  TrackGeneration.h
3DEngine/Models/Triangle/: Triangle.cpp  Triangle.h
Data/Shader/: Button.frag  Button.vert  Cube.frag  Cube.vert  FontMeta.frag  FontMeta.vert  Model.frag  Model.vert  Text.frag  Text.geom  Text.vert  Track.vert  TrackGeneration.frag  TrackGeneration.vert  Triangle.frag  Triangle.vert
Data/Textures/: TestTex.tga  font.tga  font.xcf
